support for new post summary feature

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,48 +1,49 @@
 {{ define "main" }}
 
 {{ if .Site.Params.showCategoriesOnCategory }}
-      {{ $list := ($.Site.GetPage "taxonomyTerm" "categories").Pages }}
-  {{ if gt (len $list) 0 }}
-  {{ if .Site.Params.sortTags }}
-  {{ $list = sort $list "Title" }}
-  {{ end }}
-  <div class="archive_categories">
-    {{ range $list }}
-    <p><a href="{{ .Permalink }}">{{ .Title }}</a></p>
-    {{ end }}
-  </div>
-  {{ end }}<br>
-    {{ end }}
+{{ $list := ($.Site.GetPage "taxonomyTerm" "categories").Pages }}
+{{ if gt (len $list) 0 }}
+{{ if .Site.Params.sortTags }}
+{{ $list = sort $list "Title" }}
+{{ end }}
+<div class="archive_categories">
+	{{ range $list }}
+	<p><a href="{{ .Permalink }}">{{ .Title }}</a></p>
+	{{ end }}
+</div>
+{{ end }}<br>
+{{ end }}
 
 <div class="post-list-title">
 	<h1>{{ .Title }} {{ if .Site.Params.show_category_rss }}
 		<a href="{{ .Permalink }}feed.xml">
 			<svg xmlns="http://www.w3.org/2000/svg" id="RSSicon" viewBox="0 0 8 8" width="18" height="18">
-	
+
 				<title>The RSS feed for {{ .Title }}.</title>
-	
+
 				<style type="text/css">
 					.button {
 						stroke: none;
 						fill: orange;
 					}
-	
+
 					.symbol {
 						stroke: none;
 						fill: white;
 					}
 				</style>
-	
+
 				<rect class="button" width="8" height="8" rx="1.5" />
 				<circle class="symbol" cx="2" cy="6" r="1" />
 				<path class="symbol" d="m 1,4 a 3,3 0 0 1 3,3 h 1 a 4,4 0 0 0 -4,-4 z" />
 				<path class="symbol" d="m 1,2 a 5,5 0 0 1 5,5 h 1 a 6,6 0 0 0 -6,-6 z" />
-	
+
 			</svg>
-			</a>
-		
-		
-		{{ end }}</h1>
+		</a>
+
+
+		{{ end }}
+	</h1>
 </div>
 
 <div class="home h-feed">
@@ -58,31 +59,38 @@
 		{{ end }}
 
 		{{ if .Title }}
-		{{ if .Site.Params.showFullPost }}
 		<li class="post-list-item">
-			<h1><a href="{{ .Permalink }}" class="post-list-item-title">{{ .Title }}</a></h1>
-			<a href="{{ .Permalink }}" class="post-list-item-date"><span class="post-meta"><time
-						class="post-list-item-date dt-published" datetime="{{ $postDateTimeSys }}">{{ $postDateTime
-						}}</time></span></a>
+			<h1 class="p-name"><a href="{{ .Permalink }}" class="post-list-item-title">{{ .Title }}</a></h1>
+			<a href="{{ .Permalink }}" class="post-list-item-date"><span class="post-meta"><time class="dt-published"
+						datetime="{{ $postDateTimeSys }}">{{ $postDateTime }}</time></span></a>
 			<div class="post-list-item-content">
+				{{ if .Site.Params.showFullPost }}
 				{{ .Content }}
+				{{ else }}
+				<p>{{ .Summary | safeHTML}} <a href="{{ .Permalink }}" class="continue-link">Continue reading →</a></p>
+				{{ end }}
 			</div>
 		</li>
-		{{ else }}
+		{{ else if in .RawContent "<!--more-->"}}
 		<li class="post-list-item">
-			<h1><a href="{{ .Permalink }}" class="post-list-item-title">{{ .Title }}</a></h1>
-			<a href="{{ .Permalink }}" class="post-list-item-date"><span class="post-meta"><time
-						class="post-list-item-date dt-published" datetime="{{ $postDateTimeSys }}">{{ $postDateTime
-						}}</time></span></a>
+			<h1 class="p-name"><a href="{{ .Permalink }}" class="post-list-item-title">{{ .Title }}</a></h1>
+			<a href="{{ .Permalink }}" class="post-list-item-date"><span class="post-meta"><time class="dt-published"
+						datetime="{{ $postDateTimeSys }}">{{ $postDateTime }}</time></span></a>
 			<div class="post-list-item-content">
-				<p>{{ .Summary | truncate 300 }} <a href="{{ .Permalink }}" class="continue-link">read more</a></p>
+				{{ if .Site.Params.showFullPost }}
+				{{ .Content }}
+				{{ else }}
+				<p>{{ .Summary }} {{- if .Truncated }}<a href="{{ .Permalink }}" class="continue-link">Continue reading
+						→</a>{{
+					end }}
+				</p>
+				{{ end }}
 			</div>
 		</li>
-		{{ end }}
 		{{ else }}
 		<li class="post-list-item">
 			<a href="{{ .Permalink }}" class="post-list-item-date"><span class="post-meta"><time class="dt-published"
-						datetime="{{ .Date.Format " 2006-01-02 15:04:05 -0700" }}">{{ $postDateTime }}</time></span></a>
+						datetime="{{ $postDateTimeSys }}">{{ $postDateTime }}</time></span></a>
 			<div class="post-list-item-content">
 				{{ .Content }}
 			</div>
