--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,7 +5,7 @@
     <h1 class="post-title">{{ .Title }}</h1>
   </header>
 
-  <article class="post-content">
+  <article>
     {{ .Content }}
   </article>
 
