--- a/static/css/main.css
+++ b/static/css/main.css
@@ -247,7 +247,7 @@ a.post-list-item-date:hover {
 .post-list-item-date {
   display: block;
   text-align: center;
-  font-size: var(--font-size-normal);
+  font-size: var(--font-size-small);
 }
 
 a.post-list-item-date {
