--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,4 @@
 {{ define "main" }}
-
 {{ if .Site.Params.showCategoriesOnCategory }}
 {{ $list := ($.Site.GetPage "taxonomyTerm" "categories").Pages }}
 {{ if gt (len $list) 0 }}
@@ -13,14 +12,11 @@
 </div>
 {{ end }}<br>
 {{ end }}
-
 <div class="post-list-title">
 	<h1>{{ .Title }} {{ if .Site.Params.show_category_rss }}
 		<a href="{{ .Permalink }}feed.xml">
 			<svg xmlns="http://www.w3.org/2000/svg" id="RSSicon" viewBox="0 0 8 8" width="18" height="18">
-
 				<title>The RSS feed for {{ .Title }}.</title>
-
 				<style type="text/css">
 					.button {
 						stroke: none;
@@ -32,73 +28,84 @@
 						fill: white;
 					}
 				</style>
-
 				<rect class="button" width="8" height="8" rx="1.5" />
 				<circle class="symbol" cx="2" cy="6" r="1" />
 				<path class="symbol" d="m 1,4 a 3,3 0 0 1 3,3 h 1 a 4,4 0 0 0 -4,-4 z" />
 				<path class="symbol" d="m 1,2 a 5,5 0 0 1 5,5 h 1 a 6,6 0 0 0 -6,-6 z" />
-
 			</svg>
 		</a>
-
-
 		{{ end }}
 	</h1>
 </div>
-
 <div class="home h-feed">
 	<ul class="post-list">
 		{{ $paginator := .Paginate (where .Pages.ByDate.Reverse "Type" "post") (index .Site.Params "paginate" | default
 		20) }}
 		{{ range $paginator.Pages }}
-
 		{{ $postDateTimeSys := .Date.Format "2006-01-02T15:04:00Z" }}
 		{{ $postDateTime := .Date.Format "January 2, 2006" }}
 		{{ if .Site.Params.showPostTimeOnIndex}}
 		{{ $postDateTime = .Date.Format "January 2, 2006 3:04pm" }}
 		{{ end }}
-
 		{{ if .Title }}
-		<li class="post-list-item">
-			<h1 class="p-name"><a href="{{ .Permalink }}" class="post-list-item-title">{{ .Title }}</a></h1>
-			<a href="{{ .Permalink }}" class="post-list-item-date"><span class="post-meta"><time class="dt-published"
-						datetime="{{ $postDateTimeSys }}">{{ $postDateTime }}</time></span></a>
-			<div class="post-list-item-content">
+		<li class="h-entry post-list-item">
+			<h2 class="p-name"><a href="{{ .Permalink }}" class="p-url post-list-item-title">{{ .Title }}</a></h2>
+			<div class="post-list-item-content e-content">
+				{{ partial "metadata.html" . }}
 				{{ if .Site.Params.showFullPost }}
 				{{ .Content }}
 				{{ else }}
-				<p>{{ .Summary | safeHTML}} <a href="{{ .Permalink }}" class="continue-link">Continue reading →</a></p>
+				<p class="p-summary">{{ .Summary | safeHTML}} <a href="{{ .Permalink }}" class="continue-link">Continue
+						reading →</a></p>
+				{{ end }}
+				{{ if .Site.Params.showTinylyticsKudos }}
+				<div class="cards-kudos">
+					<button class="tinylytics_kudos" data-path="{{ .Permalink }}"></button>
+				</div>
 				{{ end }}
 			</div>
 		</li>
 		{{ else if in .RawContent "<!--more-->"}}
-		<li class="post-list-item">
-			<h1 class="p-name"><a href="{{ .Permalink }}" class="post-list-item-title">{{ .Title }}</a></h1>
-			<a href="{{ .Permalink }}" class="post-list-item-date"><span class="post-meta"><time class="dt-published"
-						datetime="{{ $postDateTimeSys }}">{{ $postDateTime }}</time></span></a>
-			<div class="post-list-item-content">
-				{{ if .Site.Params.showFullPost }}
+		<li class="h-entry post-list-item">
+			<h2 class="p-name"><a href="{{ .Permalink }}" class="p-url post-list-item-title">{{ .Title }}</a></h2>
+			<div class="post-list-item-content e-content">
+				{{ partial "metadata.html" . }}
+				{{ if .Site.Params.showFullPost }}		
 				{{ .Content }}
 				{{ else }}
-				<p>{{ .Summary }} {{- if .Truncated }}<a href="{{ .Permalink }}" class="continue-link">Continue reading
+				<p class="p-summary">{{ .Summary | safeHTML}} {{- if .Truncated }}<a href="{{ .Permalink }}"
+						class="continue-link">Continue reading
 						→</a>{{
 					end }}
 				</p>
 				{{ end }}
+				{{ if .Site.Params.showTinylyticsKudos }}
+				<div class="cards-kudos">
+					<button class="tinylytics_kudos" data-path="{{ .Permalink }}"></button>
+				</div>
+				{{ end }}
 			</div>
 		</li>
 		{{ else }}
-		<li class="post-list-item">
-			<a href="{{ .Permalink }}" class="post-list-item-date"><span class="post-meta"><time class="dt-published"
-						datetime="{{ $postDateTimeSys }}">{{ $postDateTime }}</time></span></a>
-			<div class="post-list-item-content">
+		<li class="h-entry post-list-item">
+			<h2 class="p-name">
+				<a href="{{ .Permalink }}" class="p-url post-list-item-title">
+					{{ if .Title }}{{ .Title }}{{ else }}{{ $postDateTime }}{{ end }}
+				</a>
+			</h2>
+			<div class="post-list-item-content e-content">
+				{{ partial "metadata.html" . }}
 				{{ .Content }}
+				{{ if .Site.Params.showTinylyticsKudos }}
+				<div class="cards-kudos">
+					<button class="tinylytics_kudos" data-path="{{ .Permalink }}"></button>
+				</div>
+				{{ end }}
 			</div>
 		</li>
 		{{ end }}
 		{{ end }}
 	</ul>
-
 </div>
 <div class="pagination">
 	{{ if .IsHome }}
