--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,3 @@
-/** CSS that is configurable through the plugin settings are applied in Cards.html file. */
 :root {
   --font-family: Inter var, ui-sans-serif, system-ui, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   --font-size-normal: 18px;
@@ -8,10 +7,9 @@
   --width-max: 780px;
   --width-min: 350px;
   --width-max-image: 720px;
-  --border-radius: 4px;
+  --border-radius: 4px
 }
 
-/* ============================== Main ============================== */
 body {
   font-family: var(--font-family);
   font-size: var(--font-size-normal);
@@ -19,62 +17,58 @@ body {
   line-height: 1.5;
   background-color: var(--body-background-color);
   padding: 10px;
-  margin: 0px;
+  margin: 0
 }
 
 h1 {
-  font-size: 1.5rem;
+  font-size: 1.5rem
 }
 
 h2 {
-  font-size: 1.4rem;
+  font-size: 1.4rem
 }
 
 h3 {
-  font-size: 1.2rem;
+  font-size: 1.2rem
 }
 
 hr {
-  border-top: 1px dashed var(--shadow-color);
+  border-top: 1px dashed var(--shadow-color)
 }
 
-/* ============================== Code ============================== */
 pre {
   background-color: #272822;
   color: #f9f9f9;
   overflow: auto;
   padding: 15px;
-  font-size: 16px;
+  font-size: 16px
 }
 
-/* ============================== Images ============================== */
 img {
   max-width: 100%;
   height: auto;
-  vertical-align: middle;
+  vertical-align: middle
 }
 
 .post-list img {
   display: block;
   margin: auto;
-  margin-top: 15px;
+  margin-top: 15px
 }
 
 article img {
   display: block;
   margin: auto;
   margin-top: 15px;
-  border-radius: 5px;
+  border-radius: 5px
 }
 
-/* ============================== Embedded Content ============================== */
 iframe {
   display: block;
   margin: auto;
-  max-width: 100%;
+  max-width: 100%
 }
 
-/* ============================== Site Header ============================== */
 .site-header {
   max-width: var(--width-max);
   min-width: var(--width-min);
@@ -84,47 +78,45 @@ iframe {
   justify-content: space-between;
   flex-direction: column;
   padding: 10px;
-  font-size: smaller;
+  font-size: smaller
 }
 
 .site-header-title-link {
-  font-weight: 700;
+  font-weight: 700
 }
 
 .site-header a,
 .site-header a:visited {
   color: var(--body-text-color);
-  text-decoration: none;
+  text-decoration: none
 }
 
 .site-header a:hover {
-  color: var(--body-hover-color);
+  color: var(--body-hover-color)
 }
 
 .site-header-title,
 .site-nav-link {
-  padding: 10px;
-
+  padding: 10px
 }
 
 .site-header-row {
-  padding: 5px;
+  padding: 5px
 }
 
 .site-header-row img {
-  width: 80px;
+  width: 80px
 }
 
-/* ============================== Site Nav ============================== */
 .site-nav {
   max-width: var(--width-max);
   min-width: var(--width-min);
-  text-align: center;
+  text-align: center
 }
 
 a.site-header-title-link {
   font-size: var(--font-size-title);
-  color: var(--body-text-color);
+  color: var(--body-text-color)
 }
 
 a.site-nav-link,
@@ -133,25 +125,24 @@ a.site-nav-link:visited {
   color: var(--body-accent-color);
   text-decoration: none;
   padding: 0 5px;
-  margin: 0px;
-  font-weight: 600;
+  margin: 0;
+  font-weight: 600
 }
 
 a.site-nav-link:hover {
-  color: var(--body-hover-color);
+  color: var(--body-hover-color)
 }
 
-/* ============================== Categories ============================== */
 div.archive_categories {
   display: flex;
   justify-content: center;
   flex-flow: wrap;
-  gap: 6px;
+  gap: 6px
 }
 
 div.archive_categories p {
   margin: 0;
-  padding: 0;
+  padding: 0
 }
 
 div.archive_categories p a,
@@ -167,14 +158,14 @@ div.archive_categories p a,
   margin: 0;
   display: inline-flex;
   align-items: center;
-  vertical-align: middle;
+  vertical-align: middle
 }
 
 div.cards-metadata-categories span a {
   color: var(--card-accent-color);
   text-decoration: none;
   font-size: var(--font-size-small);
-  line-height: 2.5;
+  line-height: 2.5
 }
 
 div.archive_categories p a:hover,
@@ -182,31 +173,30 @@ div.cards-metadata-categories span a:hover,
 .tinylytics_kudos:hover {
   color: var(--card-hover-color);
   font-size: var(--font-size-small);
-  text-decoration: underline;
+  text-decoration: underline
 }
 
 .cards-metadata-categories {
   display: inline-flex;
-  align-items: center;
+  align-items: center
 }
 
 .cards-metadata-categories span {
   margin: 0;
-  padding: 0;
+  padding: 0
 }
 
 .cards-kudos {
   padding-top: 20px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center
 }
 
-/* ============================== Site Content ============================== */
 .page-content {
   max-width: var(--width-max);
   min-width: var(--width-min);
-  margin: auto;
+  margin: auto
 }
 
 .post-list {
@@ -214,11 +204,11 @@ div.cards-metadata-categories span a:hover,
   flex-direction: column;
   gap: 25px;
   padding: 0;
-  margin: 4px 0 0 0;
+  margin: 4px 0 0 0
 }
 
 .post-list-title {
-  text-align: center;
+  text-align: center
 }
 
 li.post-list-item,
@@ -230,13 +220,12 @@ div.microblog_conversation {
   list-style: none;
   border-radius: 8px;
   padding: 25px;
-  box-shadow: var(--shadow-color) 0px 30px 30px -50px,
-    var(--shadow-color) 0px 30px 30px -30px;
+  box-shadow: var(--shadow-color) 0 30px 30px -50px, var(--shadow-color) 0 30px 30px -30px;
   background-color: var(--card-background-color);
   color: var(--card-text-color);
   border: 1px solid var(--card-border-color);
   margin-bottom: 10px;
-  margin-top: 14px;
+  margin-top: 14px
 }
 
 li.post-list-item a,
@@ -245,7 +234,7 @@ li.h-entry a,
 p.h-entry a,
 div.photos-grid-container a {
   color: var(--card-accent-color);
-  text-decoration: none;
+  text-decoration: none
 }
 
 li.post-list-item a:hover,
@@ -253,40 +242,39 @@ li.post-list-item a:hover,
 li.h-entry a:hover,
 p.h-entry a:hover,
 div.photos-grid-container a:hover {
-  color: var(--card-hover-color);
+  color: var(--card-hover-color)
 }
 
 .post-header {
   text-align: center;
-  margin-bottom: 15px;
+  margin-bottom: 15px
 }
 
 .post-list-item-title {
   display: block;
   text-align: center;
-  font-size: var(--font-size-large);
+  font-size: var(--font-size-large)
 }
 
 a.post-list-item-title {
-  color: var(--body-accent-color);
+  color: var(--body-accent-color)
 }
 
 a.post-list-item-title:hover,
 a.post-list-item-date:hover {
-  color: var(--card-hover-color);
+  color: var(--card-hover-color)
 }
 
 .post-list-item-date {
   display: block;
   text-align: center;
-  font-size: var(--font-size-small);
+  font-size: var(--font-size-small)
 }
 
 a.post-list-item-date {
-  color: var(---meta-color);
+  color: var(---meta-color)
 }
 
-/* ============================== Blockquotes ============================== */
 blockquote {
   border-left: 4px solid var(--blockquote-border);
   border-right: 4px solid var(--blockquote-border);
@@ -296,42 +284,39 @@ blockquote {
   padding: 5px 15px 15px 15px;
   background-color: var(--blockquote);
   border-radius: 5px;
-  margin-left: 0px;
-  margin-right: 0px;
+  margin-left: 0;
+  margin-right: 0
 }
 
-/* ============================== Metadata ============================== */
 .cards-metadata {
   display: flex;
   justify-content: center;
   width: 100%;
   gap: 10px;
-  flex-direction: row;
+  flex-direction: row
 }
 
 .cards-metadata .cards-metadata-date,
 .cards-metadata .cards-metadata-readingtime {
   font-size: var(--font-size-small);
   color: var(---meta-color);
-  line-height: 2.5;
+  line-height: 2.5
 }
 
 .cards-metadata .cards-metadata-author {
-  display: none;
+  display: none
 }
 
-/* ============================== Response Options ============================== */
 .microblog_post {
-  padding: 20px;
+  padding: 20px
 }
 
 .response-options {
   padding: 20px;
   display: flex;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: row
 }
-
 
 .response-options a,
 .response-options .tinylytics_kudos,
@@ -344,86 +329,82 @@ blockquote {
   background-color: var(--card-background-color);
   white-space: nowrap;
   text-decoration: none;
-  margin-bottom: 5px;
+  margin-bottom: 5px
 }
 
 .response-options a:hover,
 .response-options button.tinylytics_kudos:hover,
 .cards-metadata button.tinylytics_kudos:hover {
   color: var(--card-hover-color);
-  border: 1px solid var(--card-hover-color);
+  border: 1px solid var(--card-hover-color)
 }
 
 .site-image {
-  border-radius: 50px;
+  border-radius: 50px
 }
 
 .microblog_conversation a {
   color: var(--card-accent-color);
-  text-decoration: none;
+  text-decoration: none
 }
 
 .microblog_conversation a:hover {
-  color: var(--card-hover-color);
+  color: var(--card-hover-color)
 }
 
 .microblog_reply_textarea textarea {
-  width: 100%;
+  width: 100%
 }
 
-@media (max-width: 500px) {
+@media (max-width:500px) {
   .response-options {
-    flex-direction: column;
+    flex-direction: column
   }
 
   .response-options a {
-    text-align: center;
+    text-align: center
   }
 }
 
-/* ============================== Related Content ============================== */
 .related-content {
   font-size: var(--font-size-small);
-  margin: 30px;
+  margin: 30px
 }
 
 .related-content a {
-  color: var(--body-accent-color);
+  color: var(--body-accent-color)
 }
 
 .related-content a:hover {
-  color: var(--body-hover-color);
+  color: var(--body-hover-color)
 }
 
-/* ============================== Site Footer ============================== */
 .site-footer {
   max-width: var(--width-max);
   min-width: var(--width-min);
   text-align: center;
   font-size: var(--font-size-small);
-  margin: auto;
+  margin: auto
 }
 
 .site-footer a,
 .site-footer a:visited {
   color: var(--body-accent-color);
-  text-decoration: none;
+  text-decoration: none
 }
 
 .site-footer a:hover {
-  color: var(--body-hover-color);
+  color: var(--body-hover-color)
 }
 
 .tinylytics_webring {
-  text-decoration: none;
+  text-decoration: none
 }
 
-/* ============================== Photos ============================== */
 .photos-grid-container {
-  grid-template-columns: 32% 32% 32%;
+  grid-template-columns: 32% 32% 32%
 }
 
-/* ============================== Forms ============================== */
 input[type='email'],
 input[type='text'] {
   box-sizing: border-box;
@@ -431,18 +412,18 @@ input[type='text'] {
   border-radius: 5px;
   height: 35px;
   font-size: var(--font-size-normal);
-  margin: 0px;
+  margin: 0;
   padding: 10px;
-  width: 80%;
+  width: 80%
 }
 
-@media (max-width: 500px) {
+@media (max-width:500px) {
 
   input[type='email'],
   input[type='text'] {
-    margin: 0px;
+    margin: 0;
     padding: 10px;
-    width: 65%;
+    width: 65%
   }
 }
 
@@ -457,7 +438,7 @@ input[type='q'] {
   font-size: var(--font-size-normal);
   display: inline;
   margin: 10px;
-  padding: 10px;
+  padding: 10px
 }
 
 textarea[name='message'] {
@@ -467,7 +448,7 @@ textarea[name='message'] {
   height: 200px;
   font-size: var(--font-size-normal);
   margin: 10px;
-  padding: 10px;
+  padding: 10px
 }
 
 form input[type='submit'],
@@ -479,73 +460,68 @@ form button {
   color: white;
   min-width: 100px;
   height: 35px;
-  font-size: var(--font-size-normal);
+  font-size: var(--font-size-normal)
 }
 
-/* ============================== Pagination ============================== */
 .pagination {
   text-align: center;
   padding: 20px;
   display: flex;
   flex-direction: column;
-  font-weight: 800;
+  font-weight: 800
 }
 
 #post-nav {
   display: flex;
   margin: auto;
-  gap: 30px;
+  gap: 30px
 }
 
 .pagination .prev a,
 .pagination .next a {
   color: var(--card-accent-color);
   text-decoration: none;
-  font-weight: 600px;
+  font-weight: 600px
 }
 
 .pagination .prev a:hover,
 .pagination .next a:hover {
-  color: var(--card-hover-color);
+  color: var(--card-hover-color)
 }
 
-
-/* ============================== Bigfoot Overrides ============================== */
 .bigfoot-footnote__content {
   background: var(--body-background-color) !important;
-  color: var(--body-text-color);
+  color: var(--body-text-color)
 }
 
-/* ============================== Blogroll ============================== */
 ul.blogroll li {
-  list-style-type: none !important;
+  list-style-type: none !important
 }
 
 ul.blogroll li a {
   text-decoration: none;
-  color: black;
+  color: black
 }
 
 ul.blogroll li a span {
-  color: gray;
+  color: gray
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme:dark) {
   ul.blogroll li a {
-    color: white;
+    color: white
   }
 }
 
-/* ============================== Search Plugin ============================== */
 div#list_results {
   margin-top: 10px;
-  background-color: var(--card-background-color);
+  background-color: var(--card-background-color)
 }
 
 div#list_results p a {
-  color: var(--card-accent-color);
+  color: var(--card-accent-color)
 }
 
 div#list_results p a:hover {
-  color: var(--card-hover-color);
+  color: var(--card-hover-color)
 }
