--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,7 +37,9 @@
         {{ end }}
         {{ if .Site.Params.showTinylyticsKudos }}
         <div class="cards-kudos">
-          <button class="tinylytics_kudos" data-path="{{ .Permalink }}"></button>
+          <button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos" title="Give Kudos">
+            <span class="visually-hidden">Give Kudos</span>
+          </button>
         </div>
         {{ end }}
       </div>
@@ -58,7 +60,9 @@
         {{ end }}
         {{ if .Site.Params.showTinylyticsKudos }}
         <div class="cards-kudos">
-          <button class="tinylytics_kudos" data-path="{{ .Permalink }}"></button>
+          <button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos" title="Give Kudos">
+            <span class="visually-hidden">Give Kudos</span>
+          </button>
         </div>
         {{ end }}
       </div>
@@ -70,7 +74,9 @@
         {{ .Content }}
         {{ if .Site.Params.showTinylyticsKudos }}
         <div class="cards-kudos">
-          <button class="tinylytics_kudos" data-path="{{ .Permalink }}"></button>
+          <button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos" title="Give Kudos">
+            <span class="visually-hidden">Give Kudos</span>
+          </button>
         </div>
         {{ end }}
       </div>
