--- a/layouts/partials/cards.html
+++ b/layouts/partials/cards.html
@@ -13,7 +13,7 @@
     --blockquote-text: {{ .Site.Params.light_blockquote_text | default "#222222" }};
     --shadow-color: {{ .Site.Params.light_shadow_color | default "#c2c6cb"}};
     --card-border-color: {{ .Site.Params.light_card_border_color | default "#eaeaec"}};
-    --meta-color: {{ .Site.Params.light_meta_color | default "#454545"}};
+    --meta-color: {{ .Site.Params.light_meta_color | default "#6B6B6B"}};
   }
   
   @media (prefers-color-scheme: dark) {
