css optimization, default colors

--- a/layouts/partials/cards.html
+++ b/layouts/partials/cards.html
@@ -18,20 +18,20 @@
   
   @media (prefers-color-scheme: dark) {
   :root {
-    --body-background-color: {{ .Site.Params.dark_body_background_color | default "#2f211a" }};
+    --body-background-color: {{ .Site.Params.dark_body_background_color | default "#202020" }};
     --body-text-color: {{ .Site.Params.dark_body_text_color | default "#e5e1de" }};
-    --body-accent-color: {{ .Site.Params.dark_body_accent_color | default "#b58650" }};
-    --body-hover-color: {{ .Site.Params.dark_body_hover_color | default "#9b5327" }};
-    --card-background-color: {{ .Site.Params.dark_card_background_color | default "#3f2f27" }};
+    --body-accent-color: {{ .Site.Params.dark_body_accent_color | default "#efefef" }};
+    --body-hover-color: {{ .Site.Params.dark_body_hover_color | default "#0375d5" }};
+    --card-background-color: {{ .Site.Params.dark_card_background_color | default "#2b2b2b" }};
     --card-text-color: {{ .Site.Params.dark_card_text_color | default "#e5e1de" }};
-    --card-accent-color: {{ .Site.Params.dark_card_accent_color | default "#b58650" }};
-    --card-hover-color: {{ .Site.Params.dark_card_hover_color | default "#9b5327" }};
+    --card-accent-color: {{ .Site.Params.dark_card_accent_color | default "#0375d5" }};
+    --card-hover-color: {{ .Site.Params.dark_card_hover_color | default "#065ca5" }};
     --blockquote: {{ .Site.Params.dark_blockquote_color | default "#f3f0ec" }};
     --blockquote-border: {{ .Site.Params.dark_blockquote_border | default "#c0870c" }};
     --blockquote-text: {{ .Site.Params.dark_blockquote_text | default "#303030" }};
     --shadow-color: {{ .Site.Params.dark_shadow_color | default "#080604" }};
     --card-border-color: {{ .Site.Params.dark_card_border_color | default "#2b1e18" }};
-    --meta-color: {{ .Site.Params.dark_meta_color | default "#454545" }};
+    --meta-color: {{ .Site.Params.dark_meta_color | default "#4f4f4f" }};
   }
 }
 
