--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -42,15 +42,8 @@
         </div>
     </article>
     {{ if eq .Type "post"}}
-    {{ if or (templates.Exists "partials/reply-by-email.html") (templates.Exists "partials/conversation-link.html")
-    (templates.Exists "partials/reply-on-mastodon.html") (.Site.Params.showTinylyticsKudos) }}
-    <div class="response-options">
-        {{ if templates.Exists "partials/conversation-link.html" }}{{ partial "conversation-link.html" . }}{{ end }}
-        {{ if templates.Exists "partials/reply-by-email.html" }}{{ partial "reply-by-email.html" . }}{{ end }}
-        {{ if templates.Exists "partials/reply-on-mastodon.html" }}{{ partial "reply-on-mastodon.html" . }} {{ end }}
-    </div>
+    {{ if templates.Exists "partials/cusdis.html" }} {{ partial "cusdis.html" . }}
     {{ end }}
-    {{ if templates.Exists "partials/cusdis.html" }} {{ partial "cusdis.html" . }}{{ end }}
     {{ end }}
     {{ if .Site.Params.include_conversation }}
     <script src="https://micro.blog/conversation.js?url={{ .Permalink }}"></script>
