default hover accent colors

--- a/layouts/partials/cards.html
+++ b/layouts/partials/cards.html
@@ -3,11 +3,11 @@
     --body-background-color: {{ .Site.Params.light_body_background_color | default "#f0f2f5" }};
     --body-text-color: {{ .Site.Params.light_body_text_color | default "#222222" }};
     --body-accent-color: {{ .Site.Params.light_body_accent_color | default "#222222" }};
-    --body-hover-color: {{ .Site.Params.light_body_hover_color | default "#0375d5" }};
+    --body-hover-color: {{ .Site.Params.light_body_hover_color | default "#D37C03" }};
     --card-background-color: {{ .Site.Params.light_card_background_color | default "#ffffff" }};
     --card-text-color: {{ .Site.Params.light_card_text_color | default "#222222" }};
     --card-accent-color: {{ .Site.Params.light_card_accent_color | default "#065ca5" }};
-    --card-hover-color: {{ .Site.Params.light_card_hover_color | default "#0375d5"}};
+    --card-hover-color: {{ .Site.Params.light_card_hover_color | default "#D37C03"}};
     --blockquote: {{ .Site.Params.light_blockquote_color | default "#f9f4e4"}};
     --blockquote-border: {{ .Site.Params.light_blockquote_border | default "#d9a40d" }};
     --blockquote-text: {{ .Site.Params.light_blockquote_text | default "#222222" }};
