--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -59,11 +59,14 @@
 						reading →</a></p>
 				{{ end }}
 				{{ if .Site.Params.showTinylyticsKudos }}
-				<div class="cards-kudos">
-                <button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos" title="Give Kudos">
-                    <span class="visually-hidden">Give Kudos</span>
-                </button>
-            </div>
+				<div class="cards-article-interactions">
+					<div class="cards-kudos">
+						<button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos"
+							title="Give Kudos">
+							<span class="visually-hidden">Give Kudos</span>
+						</button>
+					</div>
+				</div>
 				{{ end }}
 			</div>
 		</li>
@@ -72,7 +75,7 @@
 			<h2 class="p-name"><a href="{{ .Permalink }}" class="p-url post-list-item-title">{{ .Title }}</a></h2>
 			<div class="post-list-item-content e-content">
 				{{ partial "metadata.html" . }}
-				{{ if .Site.Params.showFullPost }}		
+				{{ if .Site.Params.showFullPost }}
 				{{ .Content }}
 				{{ else }}
 				<p class="p-summary">{{ .Summary | safeHTML}} {{- if .Truncated }}<a href="{{ .Permalink }}"
@@ -82,11 +85,14 @@
 				</p>
 				{{ end }}
 				{{ if .Site.Params.showTinylyticsKudos }}
-				<div class="cards-kudos">
-                <button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos" title="Give Kudos">
-                    <span class="visually-hidden">Give Kudos</span>
-                </button>
-            </div>
+				<div class="cards-article-interactions">
+					<div class="cards-kudos">
+						<button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos"
+							title="Give Kudos">
+							<span class="visually-hidden">Give Kudos</span>
+						</button>
+					</div>
+				</div>
 				{{ end }}
 			</div>
 		</li>
@@ -96,11 +102,14 @@
 				{{ partial "metadata.html" . }}
 				{{ .Content }}
 				{{ if .Site.Params.showTinylyticsKudos }}
-				<div class="cards-kudos">
-                <button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos" title="Give Kudos">
-                    <span class="visually-hidden">Give Kudos</span>
-                </button>
-            </div>
+				<div class="cards-article-interactions">
+					<div class="cards-kudos">
+						<button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos"
+							title="Give Kudos">
+							<span class="visually-hidden">Give Kudos</span>
+						</button>
+					</div>
+				</div>
 				{{ end }}
 			</div>
 		</li>
