updated tinylytics kudos data-path to use relative link

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,7 +37,7 @@
         {{ end }}
         {{ if .Site.Params.showTinylyticsKudos }}<div class="cards-article-interactions">
           <div class="cards-kudos">
-            <button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos" title="Give Kudos">
+            <button class="tinylytics_kudos" data-path="{{ .RelPermalink }}" aria-label="Give Kudos" title="Give Kudos">
               <span class="visually-hidden">Give Kudos</span>
             </button>
           </div>
@@ -62,7 +62,7 @@
         {{ if .Site.Params.showTinylyticsKudos }}
         <div class="cards-article-interactions">
           <div class="cards-kudos">
-            <button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos" title="Give Kudos">
+            <button class="tinylytics_kudos" data-path="{{ .RelPermalink }}" aria-label="Give Kudos" title="Give Kudos">
               <span class="visually-hidden">Give Kudos</span>
             </button>
           </div>
@@ -78,7 +78,7 @@
         {{ if .Site.Params.showTinylyticsKudos }}
         <div class="cards-article-interactions">
           <div class="cards-kudos">
-            <button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos" title="Give Kudos">
+            <button class="tinylytics_kudos" data-path="{{ .RelPermalink }}" aria-label="Give Kudos" title="Give Kudos">
               <span class="visually-hidden">Give Kudos</span>
             </button>
           </div>
