--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -61,7 +61,7 @@
 				{{ if .Site.Params.showTinylyticsKudos }}
 				<div class="cards-article-interactions">
 					<div class="cards-kudos">
-						<button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos"
+						<button class="tinylytics_kudos" data-path="{{ .RelPermalink }}" aria-label="Give Kudos"
 							title="Give Kudos">
 							<span class="visually-hidden">Give Kudos</span>
 						</button>
@@ -87,7 +87,7 @@
 				{{ if .Site.Params.showTinylyticsKudos }}
 				<div class="cards-article-interactions">
 					<div class="cards-kudos">
-						<button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos"
+						<button class="tinylytics_kudos" data-path="{{ .RelPermalink }}" aria-label="Give Kudos"
 							title="Give Kudos">
 							<span class="visually-hidden">Give Kudos</span>
 						</button>
@@ -104,7 +104,7 @@
 				{{ if .Site.Params.showTinylyticsKudos }}
 				<div class="cards-article-interactions">
 					<div class="cards-kudos">
-						<button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos"
+						<button class="tinylytics_kudos" data-path="{{ .RelPermalink }}" aria-label="Give Kudos"
 							title="Give Kudos">
 							<span class="visually-hidden">Give Kudos</span>
 						</button>
