--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -35,7 +35,7 @@
             {{ if .Site.Params.showTinylyticsKudos }}
             <div class="cards-article-interactions">
                 <div class="cards-kudos">
-                    <button class="tinylytics_kudos" data-path="{{ .Permalink }}" aria-label="Give Kudos"
+                    <button class="tinylytics_kudos" data-path="{{ .RelPermalink }}" aria-label="Give Kudos"
                         title="Give Kudos">
                         <span class="visually-hidden">Give Kudos</span>
                     </button>
