--- a/layouts/partials/cards.html
+++ b/layouts/partials/cards.html
@@ -12,7 +12,7 @@
     --blockquote-border: {{ .Site.Params.light_blockquote_border | default "#d9a40d" }};
     --blockquote-text: {{ .Site.Params.light_blockquote_text | default "#222222" }};
     --shadow-color: {{ .Site.Params.light_shadow_color | default "#c2c6cb"}};
-    --card-border-color: {{ .Site.Params.light_card_border_color | default "#eaeaec"}};
+    --card-border-color: {{ .Site.Params.light_card_border_color | default "#e3e3e3"}};
     --meta-color: {{ .Site.Params.light_meta_color | default "#6B6B6B"}};
   }
   
