new parameter to keep Tinylytics kudos private

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -62,7 +62,8 @@
 				<div class="cards-article-interactions">
 					<div class="cards-kudos">
 						<button class="tinylytics_kudos" data-path="{{ .RelPermalink }}" aria-label="Give Kudos"
-							title="Give Kudos">
+							title="Give Kudos" {{ if .Site.Params.keepTinylyticsKudosPrivate }} data-private="true" {{
+							end }}>
 							<span class="visually-hidden">Give Kudos</span>
 						</button>
 					</div>
@@ -88,7 +89,8 @@
 				<div class="cards-article-interactions">
 					<div class="cards-kudos">
 						<button class="tinylytics_kudos" data-path="{{ .RelPermalink }}" aria-label="Give Kudos"
-							title="Give Kudos">
+							title="Give Kudos" {{ if .Site.Params.keepTinylyticsKudosPrivate }} data-private="true" {{
+							end }}>
 							<span class="visually-hidden">Give Kudos</span>
 						</button>
 					</div>
@@ -105,7 +107,8 @@
 				<div class="cards-article-interactions">
 					<div class="cards-kudos">
 						<button class="tinylytics_kudos" data-path="{{ .RelPermalink }}" aria-label="Give Kudos"
-							title="Give Kudos">
+							title="Give Kudos" {{ if .Site.Params.keepTinylyticsKudosPrivate }} data-private="true" {{
+							end }}>
 							<span class="visually-hidden">Give Kudos</span>
 						</button>
 					</div>
