--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -36,7 +36,8 @@
             <div class="cards-article-interactions">
                 <div class="cards-kudos">
                     <button class="tinylytics_kudos" data-path="{{ .RelPermalink }}" aria-label="Give Kudos"
-                        title="Give Kudos">
+                        title="Give Kudos" {{ if .Site.Params.keepTinylyticsKudosPrivate }} data-private="true" {{ end
+                        }}>
                         <span class="visually-hidden">Give Kudos</span>
                     </button>
                 </div>
